--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 }),
                 style: new ol.style.Style({
                     stroke: new ol.style.Stroke({
-                        color: 'blue',
+                        color: 'yellow',
                         width: 1,
                     }),
                     fill: new ol.style.Fill({
