--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>PMTiles OpenLayers Vector with MapTiler Hybrid Base Map</title>
     <meta charset="utf-8"/>
-    <script src="https://cdn.jsdelivr.net/npm/ol@v7.3.0/dist/ol.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v7.3.0/ol.css">
+    <script src="https://cdn.jsdelivr.net/npm/ol@7.3.0/dist/ol.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@7.3.0/ol.css">
     <script src="https://unpkg.com/ol-pmtiles@0.3.0/dist/olpmtiles.js"></script>
     <style>
         body, #map {
@@ -12,7 +12,6 @@
             margin: 0;
         }
 
-        /* stlyle for zoom extent button */
         button.congo-button {
             position: absolute;
             top: 60px;
@@ -30,7 +29,6 @@
 <body>
     <div id="map"></div>
     <script type="text/javascript">
-        // MapTiler hybrid base layer
         const hybridBaseLayer = new ol.layer.Tile({
             source: new ol.source.XYZ({
                 url: 'https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=0rXt9evmwC5e2EW3sauy',
@@ -39,26 +37,36 @@
             })
         });
 
-        // Vector layer for PMTiles
-        const vectorLayer = new ol.layer.VectorTile({
-                declutter: true,
-                source: new olpmtiles.PMTilesVectorSource({
-                    url: "https://raw.githack.com/grace-du/crop-land-maps/main/congo.pmtiles"
-                }),
-                style: new ol.style.Style({
-                    stroke: new ol.style.Stroke({
-                        color: 'yellow',
-                        width: 1,
-                    }),
-                    fill: new ol.style.Fill({
-                        color: 'rgba(0,0,0,0)', //polygon fill transparent
-                    })
-                })
-            });
+        const pmtilesUrls = [
+            "https://github.com/Rahebe22/cropland/blob/main/ghana/aoi10_boundarymerge.pmtiles",
+            "https://github.com/Rahebe22/cropland/blob/main/ghana/aoi11_boundarymerge.pmtiles",
+            "https://github.com/Rahebe22/cropland/blob/main/ghana/aoi12_boundarymerge.pmtiles",
+            "https://github.com/Rahebe22/cropland/blob/main/ghana/aoi13_boundarymerge.pmtiles",
+            "https://github.com/Rahebe22/cropland/blob/main/ghana/aoi14_boundarymerge.pmtiles",
+            "https://github.com/Rahebe22/cropland/blob/main/ghana/aoi15_boundarymerge.pmtiles",
+            "https://github.com/Rahebe22/cropland/blob/main/ghana/aoi16_boundarymerge.pmtiles",
+            "https://github.com/Rahebe22/cropland/blob/main/ghana/aoi1_boundarymerge.pmtiles",
+            "https://github.com/Rahebe22/cropland/blob/main/ghana/aoi2_boundarymerge.pmtiles",
 
-        // OpenLayers map with the new base layer and vector layer
+            // Add more PMTiles URLs as needed
+        ];
+
+        const vectorLayers = pmtilesUrls.map(url => new ol.layer.VectorTile({
+            declutter: true,
+            source: new olpmtiles.PMTilesVectorSource({ url: url }),
+            style: new ol.style.Style({
+                stroke: new ol.style.Stroke({
+                    color: 'yellow',
+                    width: 1,
+                }),
+                fill: new ol.style.Fill({
+                    color: 'rgba(0,0,0,0)', //polygon fill transparent
+                })
+            })
+        }));
+
         const map = new ol.Map({
-            layers: [hybridBaseLayer, vectorLayer],
+            layers: [hybridBaseLayer, ...vectorLayers],
             target: 'map',
             view: new ol.View({
                 center: ol.proj.fromLonLat([3.3, 7.85]),
@@ -66,25 +74,21 @@
             })
         });
 
-        // Congo extent (center and zoom)
         const congoCenter = ol.proj.fromLonLat([15.8277, -0.2280]);
         const congoZoom = 7;
 
-        // Function to zoom to the Congo extent
         function zoomToCongo() {
             map.getView().animate({
                 center: congoCenter,
                 zoom: congoZoom,
-                duration: 1000 // Smooth transition animation (1 second)
+                duration: 1000
             });
         }
 
-        // Create and append the Congo button
         const congoButton = document.createElement('button');
         congoButton.innerHTML = 'Congo';
         congoButton.className = 'congo-button';
         congoButton.onclick = zoomToCongo;
-        // document.querySelector('.ol-overlaycontainer-stopevent').appendChild(congoButton); // Append to the container that holds controls
         document.getElementById('map').appendChild(congoButton);
     </script>
 </body>
