--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
             height: 100vh;
             margin: 0;
         }
-
-        button.congo-button {
+        .button {
             position: absolute;
-            top: 60px;
             left: 10px;
             z-index: 1000;
             padding: 5px 10px;
@@ -24,11 +22,16 @@
             cursor: pointer;
             font-size: 14px;
         }
+        .congo-button { top: 60px; }
+        .ghana-button { top: 100px; }
+        .dropdown { display: none; position: absolute; left: 80px; background-color: #f9f9f9; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); padding: 12px 16px; z-index: 1000; }
+        .show { display: block; }
     </style>
 </head>
 <body>
     <div id="map"></div>
     <script type="text/javascript">
+        // MapTiler hybrid base layer
         const hybridBaseLayer = new ol.layer.Tile({
             source: new ol.source.XYZ({
                 url: 'https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=0rXt9evmwC5e2EW3sauy',
@@ -37,48 +40,75 @@
             })
         });
 
-        const pmtilesUrls = [
-            "https://github.com/Rahebe22/cropland/blob/main/ghana/aoi10_boundarymerge.pmtiles"];
-
-        const vectorLayers = pmtilesUrls.map(url => new ol.layer.VectorTile({
-            declutter: true,
-            source: new olpmtiles.PMTilesVectorSource({ url: url }),
-            style: new ol.style.Style({
-                stroke: new ol.style.Stroke({
-                    color: 'yellow',
-                    width: 1,
-                }),
-                fill: new ol.style.Fill({
-                    color: 'rgba(0,0,0,0)', //polygon fill transparent
+        // Create vector layer function with dynamic URL and boundary color
+        function createVectorLayer(url, boundaryColor) {
+            return new ol.layer.VectorTile({
+                declutter: true,
+                source: new olpmtiles.PMTilesVectorSource({ url }),
+                style: new ol.style.Style({
+                    stroke: new ol.style.Stroke({
+                        color: boundaryColor,
+                        width: 2,
+                    }),
+                    fill: new ol.style.Fill({
+                        color: 'rgba(0,0,0,0)', //polygon fill transparent
+                    })
                 })
-            })
-        }));
-
-        const map = new ol.Map({
-            layers: [hybridBaseLayer, ...vectorLayers],
-            target: 'map',
-            view: new ol.View({
-                center: ol.proj.fromLonLat([3.3, 7.85]),
-                zoom: 5
-            })
-        });
-
-        const congoCenter = ol.proj.fromLonLat([15.8277, -0.2280]);
-        const congoZoom = 7;
-
-        function zoomToCongo() {
-            map.getView().animate({
-                center: congoCenter,
-                zoom: congoZoom,
-                duration: 1000
             });
         }
 
-        const congoButton = document.createElement('button');
-        congoButton.innerHTML = 'Congo';
-        congoButton.className = 'congo-button';
-        congoButton.onclick = zoomToCongo;
-        document.getElementById('map').appendChild(congoButton);
+        // Congo and Ghana vector layers with yellow boundaries
+        const congoVectorLayer = createVectorLayer("https://raw.githack.com/grace-du/crop-land-maps/main/congo.pmtiles",
+         'yellow');
+        const ghanaVectorLayer = createVectorLayer("https://github.com/Rahebe22/cropland/blob/main/ghana/aoi10_boundarymerge.pmtiles",
+         'yellow');
+
+        // OpenLayers map with base layer and initial vector layer
+        const map = new ol.Map({
+            layers: [hybridBaseLayer],
+            target: 'map',
+            view: new ol.View({
+                center: ol.proj.fromLonLat([0, 0]), // Updated to a neutral center
+                zoom: 2
+            })
+        });
+
+        // Add buttons and dropdowns for Congo and Ghana
+        function addButtonAndDropdown(countryName, zoomFunction) {
+            // Create and append the button
+            const button = document.createElement('button');
+            button.innerHTML = countryName;
+            button.className = `${countryName.toLowerCase()}-button button`;
+            document.getElementById('map').appendChild(button);
+
+            // Create and append the dropdown
+            const dropdown = document.createElement('div');
+            dropdown.className = 'dropdown';
+            dropdown.innerHTML = `<strong>${countryName} Versions</strong><br>`;
+            ['Version 1', 'Version 2', 'Version 3'].forEach(version => {
+                dropdown.innerHTML += `<a href="#" onclick="changeLayer('${countryName.toLowerCase()}', '${version}');">${version}</a><br>`;
+            });
+            document.getElementById('map').appendChild(dropdown);
+
+            // Event listener to show dropdown
+            button.onclick = function() {
+                dropdown.classList.toggle("show");
+                zoomFunction();
+            };
+        }
+
+        // Function placeholders for zooming to Congo and Ghana
+        function zoomToCongo() { /* Zoom to Congo */ }
+        function zoomToGhana() { /* Zoom to Ghana */ }
+
+        addButtonAndDropdown('Congo', zoomToCongo);
+        addButtonAndDropdown('Ghana', zoomToGhana);
+
+        // Placeholder function to change the layer based on selection
+        window.changeLayer = function(country, version) {
+            console.log(`${country} ${version} selected`);
+            // Implement layer switching logic here
+        };
     </script>
 </body>
 </html>
