--- a/index.html
+++ b/index.html
@@ -101,4 +101,21 @@
 
         const yearSelect = document.createElement('select');
         yearSelect.className = 'year-dropdown';
-        ['
+        ['year_1', 'year_2', 'year_3'].forEach(year => {
+            const option = document.createElement('option');
+            option.value = year;
+            option.text = year;
+            yearSelect.appendChild(option);
+        });
+
+        countrySelect.onchange = () => addVectorLayer(countrySelect.value, yearSelect.value);
+        yearSelect.onchange = () => addVectorLayer(countrySelect.value, yearSelect.value);
+
+        document.getElementById('map').appendChild(countrySelect);
+        document.getElementById('map').appendChild(yearSelect);
+
+        // Initially load Congo vector layer
+        addVectorLayer('Congo', 'year_1');
+    </script>
+</body>
+</html>
