--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         }
         .country-button, .year-dropdown {
             position: absolute;
-            top: 10px;
-            left: 10px;
+            top: 10px; /* Adjust this for both dropdowns if needed */
+            right: 10px; /* Positions the dropdowns to the right */
             z-index: 1000;
             padding: 5px 10px;
             background-color: white;
@@ -22,10 +22,9 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 14px;
-            margin-right: 5px;
         }
         .year-dropdown {
-            top: 60px;
+            top: 60px; /* Positions the year dropdown below the country dropdown */
         }
     </style>
 </head>
