--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             height: 100vh;
             margin: 0;
         }
-        .country-button, .year-dropdown {
+        .country-button, .version-dropdown, .year-dropdown {
             position: absolute;
-            top: 10px; /* Adjust this for both dropdowns if needed */
-            right: 10px; /* Positions the dropdowns to the right */
+            top: 10px;
+            right: 10px;
             z-index: 1000;
             padding: 5px 10px;
             background-color: white;
@@ -22,9 +22,13 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 14px;
+            margin-left: 5px;
+        }
+        .version-dropdown {
+            top: 60px; /* Positions the version dropdown below the country dropdown */
         }
         .year-dropdown {
-            top: 60px; /* Positions the year dropdown below the country dropdown */
+            top: 110px; /* Positions the year dropdown below the version dropdown */
         }
     </style>
 </head>
@@ -36,7 +40,7 @@
             layers: [
                 new ol.layer.Tile({
                     source: new ol.source.XYZ({
-                        url: 'https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=0rXt9evmwC5e2EW3sauy',
+                        url: 'https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=your_api_key',
                         attributions: '© MapTiler © OpenStreetMap contributors',
                         maxZoom: 20
                     })
@@ -48,41 +52,92 @@
             })
         });
 
-        // Update the regions definition to include URLs for different years
+        // Updated regions definition to include versions
         const regions = {
             'Congo': {
                 center: ol.proj.fromLonLat([15.8277, -0.2280]),
                 zoom: 7,
-                pmtilesUrls: {
-                    'year_1': "https://raw.githack.com/grace-du/crop-land-maps/main/congo.pmtiles",
-                    'year_2': "https://example.com/congo/year_2.pmtiles",
-                    'year_3': "https://example.com/congo/year_3.pmtiles",
+                versions: {
+                    'v1': {
+                        '2022': "https://raw.githack.com/grace-du/crop-land-maps/main/congo.pmtiles",
+                        //'year_2': "https://example.com/congo/v1/year_2.pmtiles",
+                        //'year_3': "https://example.com/congo/v1/year_3.pmtiles",
+                    },
+                    // Additional versions can be added similarly
                 }
             },
             'Ghana': {
                 center: ol.proj.fromLonLat([-1.0232, 7.9465]),
                 zoom: 7,
-                pmtilesUrls: {
-                    'year_1': "https://github.com/Rahebe22/cropland/blob/6fe39494316f31c0c50dbb6acc31f1dfcafb38b7/ghana/aoi10_boundarymerge.pmtiles",
-                    'year_2': "https://example.com/ghana/year_2.pmtiles",
-                    'year_3': "https://example.com/ghana/year_3.pmtiles",
+                versions: {
+                    'v1': {
+                        'year_1': "https://example.com/ghana/v1/year_1.pmtiles",
+                        'year_2': "https://example.com/ghana/v1/year_2.pmtiles",
+                        'year_3': "https://example.com/ghana/v1/year_3.pmtiles",
+                    },
+                    // Additional versions can be added similarly
                 }
             }
         };
 
-        // Modify the addVectorLayer function to dynamically load the PMTiles
-        function addVectorLayer(country, year) {
+        const countrySelect = document.createElement('select');
+        const versionSelect = document.createElement('select');
+        const yearSelect = document.createElement('select');
+        countrySelect.className = 'country-button';
+        versionSelect.className = 'version-dropdown';
+        yearSelect.className = 'year-dropdown';
+
+        Object.keys(regions).forEach(country => {
+            const option = document.createElement('option');
+            option.value = country;
+            option.text = country;
+            countrySelect.appendChild(option);
+        });
+
+        countrySelect.onchange = () => {
+            // Clear previous options
+            versionSelect.innerHTML = '';
+            yearSelect.innerHTML = '';
+            const versions = regions[countrySelect.value].versions;
+            Object.keys(versions).forEach(version => {
+                const option = document.createElement('option');
+                option.value = version;
+                option.text = version;
+                versionSelect.appendChild(option);
+            });
+            // Automatically trigger version change to populate years
+            versionSelect.onchange();
+        };
+
+        versionSelect.onchange = () => {
+            // Clear previous options
+            yearSelect.innerHTML = '';
+            const selectedCountry = regions[countrySelect.value];
+            const selectedVersion = selectedCountry.versions[versionSelect.value];
+            Object.keys(selectedVersion).forEach(year => {
+                const option = document.createElement('option');
+                option.value = year;
+                option.text = year;
+                yearSelect.appendChild(option);
+            });
+        };
+
+        yearSelect.onchange = () => {
+            const selectedCountry = regions[countrySelect.value];
+            const selectedVersion = selectedCountry.versions[versionSelect.value];
+            const pmtilesUrl = selectedVersion[yearSelect.value];
+            addVectorLayer(pmtilesUrl);
+        };
+
+        function addVectorLayer(pmtilesUrl) {
             const existingLayer = map.getLayers().getArray().find(layer => layer.get('id') === 'vectorLayer');
             if (existingLayer) {
                 map.removeLayer(existingLayer);
             }
 
-            const region = regions[country];
-            if (!region || !region.pmtilesUrls[year]) return;
-
             const vectorLayer = new ol.layer.VectorTile({
                 source: new olpmtiles.PMTilesVectorSource({
-                    url: region.pmtilesUrls[year]
+                    url: pmtilesUrl
                 }),
                 style: new ol.style.Style({
                     stroke: new ol.style.Stroke({
@@ -94,40 +149,22 @@
             });
             map.addLayer(vectorLayer);
 
+            // Assuming the center and zoom for each country are predefined in the regions object
+            const regionInfo = regions[countrySelect.value];
             map.getView().animate({
-                center: region.center,
-                zoom: region.zoom,
+                center: regionInfo.center,
+                zoom: regionInfo.zoom,
                 duration: 1000
             });
         }
 
-        // Dropdowns setup remains the same
-        const countrySelect = document.createElement('select');
-        countrySelect.className = 'country-button';
-        Object.keys(regions).forEach(country => {
-            const option = document.createElement('option');
-            option.value = country;
-            option.text = country;
-            countrySelect.appendChild(option);
-        });
-
-        const yearSelect = document.createElement('select');
-        yearSelect.className = 'year-dropdown';
-        ['year_1', 'year_2', 'year_3'].forEach(year => {
-            const option = document.createElement('option');
-            option.value = year;
-            option.text = year;
-            yearSelect.appendChild(option);
-        });
-
-        countrySelect.onchange = () => addVectorLayer(countrySelect.value, yearSelect.value);
-        yearSelect.onchange = () => addVectorLayer(countrySelect.value, yearSelect.value);
-
         document.getElementById('map').appendChild(countrySelect);
+        document.getElementById('map').appendChild(versionSelect);
         document.getElementById('map').appendChild(yearSelect);
 
-        // Initially load Congo vector layer for year_1
-        addVectorLayer('Congo', 'year_1');
+        // Initialize dropdowns
+        countrySelect.onchange();
+
     </script>
 </body>
 </html>
