--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             height: 100vh;
             margin: 0;
         }
-        .country-button, .version-dropdown, .year-dropdown {
+        .country-button, .year-dropdown {
             position: absolute;
-            top: 10px;
-            right: 10px;
+            top: 10px; /* Adjust this for both dropdowns if needed */
+            right: 10px; /* Positions the dropdowns to the right */
             z-index: 1000;
             padding: 5px 10px;
             background-color: white;
@@ -22,13 +22,9 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 14px;
-            margin-left: 5px;
-        }
-        .version-dropdown {
-            top: 60px; /* Positions the version dropdown below the country dropdown */
         }
         .year-dropdown {
-            top: 110px; /* Positions the year dropdown below the version dropdown */
+            top: 60px; /* Positions the year dropdown below the country dropdown */
         }
     </style>
 </head>
@@ -40,7 +36,7 @@
             layers: [
                 new ol.layer.Tile({
                     source: new ol.source.XYZ({
-                        url: 'https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=your_api_key',
+                        url: 'https://api.maptiler.com/maps/hybrid/{z}/{x}/{y}.jpg?key=0rXt9evmwC5e2EW3sauy',
                         attributions: '© MapTiler © OpenStreetMap contributors',
                         maxZoom: 20
                     })
@@ -52,92 +48,41 @@
             })
         });
 
-        // Updated regions definition to include versions
+        // Update the regions definition to include URLs for different years
         const regions = {
             'Congo': {
                 center: ol.proj.fromLonLat([15.8277, -0.2280]),
                 zoom: 7,
-                versions: {
-                    'v1': {
-                        '2022': "https://raw.githack.com/grace-du/crop-land-maps/main/congo.pmtiles",
-                        //'year_2': "https://example.com/congo/v1/year_2.pmtiles",
-                        //'year_3': "https://example.com/congo/v1/year_3.pmtiles",
-                    },
-                    // Additional versions can be added similarly
+                pmtilesUrls: {
+                    '2022': "https://raw.githack.com/grace-du/crop-land-maps/main/congo.pmtiles",
+                    //'year_2': "https://github/congo/year_2.pmtiles",
+                    //'year_3': "https://github/congo/year_3.pmtiles",
                 }
             },
             'Ghana': {
                 center: ol.proj.fromLonLat([-1.0232, 7.9465]),
                 zoom: 7,
-                versions: {
-                    'v1': {
-                        'year_1': "https://example.com/ghana/v1/year_1.pmtiles",
-                        'year_2': "https://example.com/ghana/v1/year_2.pmtiles",
-                        'year_3': "https://example.com/ghana/v1/year_3.pmtiles",
-                    },
-                    // Additional versions can be added similarly
+                pmtilesUrls: {
+                    'year_1': "https://github.com/Rahebe22/cropland/blob/6fe39494316f31c0c50dbb6acc31f1dfcafb38b7/ghana/aoi10_boundarymerge.pmtiles",
+                    'year_2': "https://example.com/ghana/year_2.pmtiles",
+                    'year_3': "https://example.com/ghana/year_3.pmtiles",
                 }
             }
         };
 
-        const countrySelect = document.createElement('select');
-        const versionSelect = document.createElement('select');
-        const yearSelect = document.createElement('select');
-        countrySelect.className = 'country-button';
-        versionSelect.className = 'version-dropdown';
-        yearSelect.className = 'year-dropdown';
-
-        Object.keys(regions).forEach(country => {
-            const option = document.createElement('option');
-            option.value = country;
-            option.text = country;
-            countrySelect.appendChild(option);
-        });
-
-        countrySelect.onchange = () => {
-            // Clear previous options
-            versionSelect.innerHTML = '';
-            yearSelect.innerHTML = '';
-            const versions = regions[countrySelect.value].versions;
-            Object.keys(versions).forEach(version => {
-                const option = document.createElement('option');
-                option.value = version;
-                option.text = version;
-                versionSelect.appendChild(option);
-            });
-            // Automatically trigger version change to populate years
-            versionSelect.onchange();
-        };
-
-        versionSelect.onchange = () => {
-            // Clear previous options
-            yearSelect.innerHTML = '';
-            const selectedCountry = regions[countrySelect.value];
-            const selectedVersion = selectedCountry.versions[versionSelect.value];
-            Object.keys(selectedVersion).forEach(year => {
-                const option = document.createElement('option');
-                option.value = year;
-                option.text = year;
-                yearSelect.appendChild(option);
-            });
-        };
-
-        yearSelect.onchange = () => {
-            const selectedCountry = regions[countrySelect.value];
-            const selectedVersion = selectedCountry.versions[versionSelect.value];
-            const pmtilesUrl = selectedVersion[yearSelect.value];
-            addVectorLayer(pmtilesUrl);
-        };
-
-        function addVectorLayer(pmtilesUrl) {
+        // Modify the addVectorLayer function to dynamically load the PMTiles
+        function addVectorLayer(country, year) {
             const existingLayer = map.getLayers().getArray().find(layer => layer.get('id') === 'vectorLayer');
             if (existingLayer) {
                 map.removeLayer(existingLayer);
             }
 
+            const region = regions[country];
+            if (!region || !region.pmtilesUrls[year]) return;
+
             const vectorLayer = new ol.layer.VectorTile({
                 source: new olpmtiles.PMTilesVectorSource({
-                    url: pmtilesUrl
+                    url: region.pmtilesUrls[year]
                 }),
                 style: new ol.style.Style({
                     stroke: new ol.style.Stroke({
@@ -149,22 +94,40 @@
             });
             map.addLayer(vectorLayer);
 
-            // Assuming the center and zoom for each country are predefined in the regions object
-            const regionInfo = regions[countrySelect.value];
             map.getView().animate({
-                center: regionInfo.center,
-                zoom: regionInfo.zoom,
+                center: region.center,
+                zoom: region.zoom,
                 duration: 1000
             });
         }
 
+        // Dropdowns setup remains the same
+        const countrySelect = document.createElement('select');
+        countrySelect.className = 'country-button';
+        Object.keys(regions).forEach(country => {
+            const option = document.createElement('option');
+            option.value = country;
+            option.text = country;
+            countrySelect.appendChild(option);
+        });
+
+        const yearSelect = document.createElement('select');
+        yearSelect.className = 'year-dropdown';
+        ['year_1', 'year_2', 'year_3'].forEach(year => {
+            const option = document.createElement('option');
+            option.value = year;
+            option.text = year;
+            yearSelect.appendChild(option);
+        });
+
+        countrySelect.onchange = () => addVectorLayer(countrySelect.value, yearSelect.value);
+        yearSelect.onchange = () => addVectorLayer(countrySelect.value, yearSelect.value);
+
         document.getElementById('map').appendChild(countrySelect);
-        document.getElementById('map').appendChild(versionSelect);
         document.getElementById('map').appendChild(yearSelect);
 
-        // Initialize dropdowns
-        countrySelect.onchange();
-
+        // Initially load Congo vector layer for year_1
+        addVectorLayer('Congo', 'year_1');
     </script>
 </body>
 </html>
